--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Guglielmo Cerri - Data Scientist and Bioinformatician</title>
+    <title>Alejandro Toral</title>
     <meta name="keywords" content="data scientist, bioinformatician, data science, bioinformatics, Guglielmo Cerri">
     <meta name="author" content="Guglielmo Cerri">
     <meta name="robots" content="index, follow">
@@ -26,7 +26,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Guglielmo Cerri</a>
+            <a href="#" class="nav__logo">Alejandro Toral</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
