--- a/index.html
+++ b/index.html
@@ -408,43 +408,58 @@
             </div>
         </section>
 
-        <!--==================== PORTFOLIO ====================-->
+<!--==================== PORTFOLIO ====================-->
 <section class="portfolio section" id="portfolio">
     <h2 class="section__title">Proyectos</h2>
     <span class="section__subtitle">Trabajos más recientes</span>
 
-    <div class="portfolio__container container">
-        <!--======================== PORTFOLIO 1 =============-->
-        <div class="portfolio__card">
-            <img src="assets/img/portfolio1.gif" alt="PyTorch Dino AI Game" class="portfolio__img" loading="lazy">
-            <div class="portfolio__info">
-                <h3 class="portfolio__title">PyTorch Dino AI Game</h3>
-                <p class="portfolio__description">
-                    Entrenamiento de un modelo de IA para jugar al juego Chrome Dino utilizando PyTorch y EfficientNet.
-                </p>
-                <a href="https://github.com/GuglielmoCerri/pytorch-dino-ai-game" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
-                    Ver
-                    <i class="uil uil-arrow-right button__icon"></i>
-                </a>
+    <div class="portfolio__container-wrapper">
+        <div class="portfolio__container container">
+            <!--======================== PORTFOLIO 1 =============-->
+            <div class="portfolio__card">
+                <img src="assets/img/portfolio1.gif" alt="Captura de pantalla del juego AI Dino usando PyTorch" class="portfolio__img" loading="lazy">
+                <div class="portfolio__info">
+                    <h3 class="portfolio__title">PyTorch Dino AI Game</h3>
+                    <p class="portfolio__description">
+                        Entrenamiento de un modelo de IA para jugar al juego Chrome Dino utilizando PyTorch y EfficientNet.
+                    </p>
+                    <a href="https://github.com/GuglielmoCerri/pytorch-dino-ai-game" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
+                        Ver
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                </div>
             </div>
-        </div>
-        <!--======================== PORTFOLIO 2 =============-->
-        <div class="portfolio__card">
-            <img src="assets/img/portfolio2.gif" alt="Advent of Code Solutions" class="portfolio__img" loading="lazy">
-            <div class="portfolio__info">
-                <h3 class="portfolio__title">Advent of Code</h3>
-                <p class="portfolio__description">
-                    Soluciones a los problemas del calendario AoC para 2021 y 2022 con Python.
-                </p>
-                <a href="#" class="button button--flex button--small portfolio__button">
-                    Ver
-                    <i class="uil uil-arrow-right button__icon"></i>
-                </a>
+            <!--======================== PORTFOLIO 2 =============-->
+            <div class="portfolio__card">
+                <img src="assets/img/portfolio2.gif" alt="Soluciones a los problemas del calendario AoC 2021 y 2022 con Python" class="portfolio__img" loading="lazy">
+                <div class="portfolio__info">
+                    <h3 class="portfolio__title">Advent of Code 2021-2022</h3>
+                    <p class="portfolio__description">
+                        Soluciones a los problemas del calendario AoC para 2021 y 2022 con Python.
+                    </p>
+                    <a href="https://github.com/TuUsuario/advent-of-code" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
+                        Ver
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                </div>
+            </div>
+            <!--======================== PORTFOLIO 3 =============-->
+            <div class="portfolio__card">
+                <img src="assets/img/portfolio3.gif" alt="Otro proyecto interesante" class="portfolio__img" loading="lazy">
+                <div class="portfolio__info">
+                    <h3 class="portfolio__title">Otro Proyecto</h3>
+                    <p class="portfolio__description">
+                        Descripción breve del tercer proyecto. Asegúrate de que esta información sea relevante y única.
+                    </p>
+                    <a href="https://github.com/TuUsuario/otro-proyecto" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
+                        Ver
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
 
 
         <!--==================== CONTACT ME ====================-->
