--- a/index.html
+++ b/index.html
@@ -457,6 +457,20 @@
                     </a>
                 </div>
             </div>
+            <!--======================== PORTFOLIO 2 =============-->
+            <div class="portfolio__card">
+                <img src="assets/img/portfolio2.gif" alt="Soluciones a los problemas del calendario AoC 2021 y 2022 con Python" class="portfolio__img" loading="lazy">
+                <div class="portfolio__info">
+                    <h3 class="portfolio__title">Advent of Code 2021-2022</h3>
+                    <p class="portfolio__description">
+                        Soluciones a los problemas del calendario AoC para 2021 y 2022 con Python.
+                    </p>
+                    <a href="https://github.com/TuUsuario/advent-of-code" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
+                        Ver
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
