--- a/index.html
+++ b/index.html
@@ -408,15 +408,15 @@
             </div>
         </section>
 
-<!--==================== PORTFOLIO ====================-->
+<!--==================== PORTFOLIO SWIPER ====================-->
 <section class="portfolio section" id="portfolio">
     <h2 class="section__title">Proyectos</h2>
     <span class="section__subtitle">Trabajos más recientes</span>
 
-    <div class="portfolio__container-wrapper">
-        <div class="portfolio__container container">
-            <!--======================== PORTFOLIO 1 =============-->
-            <div class="portfolio__card">
+    <div class="portfolio__swiper-container swiper">
+        <div class="swiper-wrapper">
+            <!--======================== SLIDE 1 =============-->
+            <div class="swiper-slide portfolio__card">
                 <img src="assets/img/portfolio1.gif" alt="Captura de pantalla del juego AI Dino usando PyTorch" class="portfolio__img" loading="lazy">
                 <div class="portfolio__info">
                     <h3 class="portfolio__title">PyTorch Dino AI Game</h3>
@@ -429,8 +429,8 @@
                     </a>
                 </div>
             </div>
-            <!--======================== PORTFOLIO 2 =============-->
-            <div class="portfolio__card">
+            <!--======================== SLIDE 2 =============-->
+            <div class="swiper-slide portfolio__card">
                 <img src="assets/img/portfolio2.gif" alt="Soluciones a los problemas del calendario AoC 2021 y 2022 con Python" class="portfolio__img" loading="lazy">
                 <div class="portfolio__info">
                     <h3 class="portfolio__title">Advent of Code 2021-2022</h3>
@@ -443,8 +443,8 @@
                     </a>
                 </div>
             </div>
-            <!--======================== PORTFOLIO 3 =============-->
-            <div class="portfolio__card">
+            <!--======================== SLIDE 3 =============-->
+            <div class="swiper-slide portfolio__card">
                 <img src="assets/img/portfolio3.gif" alt="Otro proyecto interesante" class="portfolio__img" loading="lazy">
                 <div class="portfolio__info">
                     <h3 class="portfolio__title">Otro Proyecto</h3>
@@ -457,23 +457,12 @@
                     </a>
                 </div>
             </div>
-            <!--======================== PORTFOLIO 2 =============-->
-            <div class="portfolio__card">
-                <img src="assets/img/portfolio2.gif" alt="Soluciones a los problemas del calendario AoC 2021 y 2022 con Python" class="portfolio__img" loading="lazy">
-                <div class="portfolio__info">
-                    <h3 class="portfolio__title">Advent of Code 2021-2022</h3>
-                    <p class="portfolio__description">
-                        Soluciones a los problemas del calendario AoC para 2021 y 2022 con Python.
-                    </p>
-                    <a href="https://github.com/TuUsuario/advent-of-code" class="button button--flex button--small portfolio__button" target="_blank" rel="noopener noreferrer">
-                        Ver
-                        <i class="uil uil-arrow-right button__icon"></i>
-                    </a>
-                </div>
-            </div>
         </div>
+        <div class="swiper-pagination-portfolio"></div>
     </div>
 </section>
+
+
 
 
         <!--==================== CONTACT ME ====================-->
