--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">Hola, soy Alejandro</h1>
-                        <h3 class="home__subtitle">Analista de Datos</h3>
-                        <p class="home__description">Experto en Python</p>
+                        <h3 class="home__subtitle">Desarrollador</h3>
+                        <p class="home__description">Soluciones en Python</p>
                         <a href="#contact" class="button button--flex">
                             Contactame <i class="uil uil-message button__icon"></i>
                         </a>
