--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 <h2 class="section-title">Proyectos</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                    <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.zip" class="work__img">
+                        <img src="assets/img/Temp.png" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
