--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://wa.me/+528142555089" class="home__social-icon"><i class='bx bxl-whatsapp'></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-telegram' ></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
