--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hola,<br>Soy <span class="home__title-color">Alejandro Toral</span><br>Desarrollador</h1>
 
-                    <a href="#" class="button">Contacto</a>
+                    <a href="https://wa.me/+528142555089" class="button">Escribeme</a>
                 </div>
 
                 <div class="home__social">
