--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h2 class="section-title">Proyectos</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.zip" class="work__img">
+                    <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.exe" class="work__img">
                         <img src="assets/img/Temp.png" alt="">
                     </a>
                     <a href="" class="work__img">
