--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                 <div class="work__container bd-grid">
                     <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.exe" class="work__img">
-                        <img src="assets/img/Temp.png" alt="">
+                        <img src="assets/img/images.gif" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
