--- a/index.html
+++ b/index.html
@@ -144,31 +144,52 @@
                 </div>
             </section>
 
-            <!--===== WORK =====-->
-            <section class="work section" id="work">
-                <h2 class="section-title">Proyectos</h2>
+           <!--===== WORK =====-->
+<section class="work section" id="work">
+    <h2 class="section-title">Proyectos</h2>
 
-                <div class="work__container bd-grid">
-                    <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.exe" class="work__img">
-                        <img src="assets/img/images.gif" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
-                    </a>
-                </div>
-            </section>
+    <div class="work__container bd-grid">
+        <a href="https://github.com/Thoraal/Temporizador/raw/refs/heads/main/Temporizador.exe" class="work__img">
+            <img src="assets/img/images.gif" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+        <a href="" class="work__img">
+            <img src="assets/img/work2.jpg" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+        <a href="" class="work__img">
+            <img src="assets/img/work3.jpg" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+        <a href="" class="work__img">
+            <img src="assets/img/work4.jpg" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+        <a href="" class="work__img">
+            <img src="assets/img/work5.jpg" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+        <a href="" class="work__img">
+            <img src="assets/img/work6.jpg" alt="">
+            <div class="download-icon">
+                <i class="fas fa-download"></i>
+            </div>
+        </a>
+    </div>
+</section>
+
+<!-- Font Awesome for the download icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
