--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <i class="fas fa-download"></i>
             </div>
         </a>
-        <a href="" class="work__img">
+        <a href="/qr.html" class="work__img">
             <img src="assets/img/work2.jpg" alt="">
             <div class="download-icon">
                 <i class="fas fa-download"></i>
