--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </a>
         <a href="/qr.html" class="work__img">
-            <img src="assets/img/work2.jpg" alt="">
+            <img src="assets/img/qr.png" alt="">
             <div class="download-icon">
                 <i class="fas fa-download"></i>
             </div>
