--- a/qr.html
+++ b/qr.html
@@ -159,6 +159,7 @@
             <option value="wifi">WiFi</option>
             <option value="texto">Texto</option>
             <option value="vcard">vCard</option>
+            <option value="whatsapp">WhatsApp</option>
         </select>
         <div id="inputs">
             <input type="text" id="contenido" placeholder="Ingresa el enlace">
@@ -181,6 +182,9 @@
 
             if (tipo === 'link') {
                 contenido = document.getElementById('contenido').value.trim();
+                if (!contenido.startsWith('http://') && !contenido.startsWith('https://')) {
+                    contenido = 'https://' + contenido;
+                }
             } else if (tipo === 'wifi') {
                 const ssid = document.getElementById('ssid').value.trim();
                 const password = document.getElementById('password').value.trim();
@@ -193,6 +197,10 @@
                 const telefono = document.getElementById('telefono').value.trim();
                 const email = document.getElementById('email').value.trim();
                 contenido = `BEGIN:VCARD\nVERSION:3.0\nFN:${nombre}\nTEL:${telefono}\nEMAIL:${email}\nEND:VCARD`;
+            } else if (tipo === 'whatsapp') {
+                const telefono = document.getElementById('telefonoWhatsapp').value.trim();
+                const prefijo = document.getElementById('prefijoWhatsapp').value;
+                contenido = `https://wa.me/${prefijo}${telefono}`;
             }
 
             if (contenido) {
@@ -262,6 +270,147 @@
                     <input type="text" id="nombre" placeholder="Nombre">
                     <input type="text" id="telefono" placeholder="Teléfono">
                     <input type="text" id="email" placeholder="Correo electrónico">
+                `;
+            } else if (this.value === 'whatsapp') {
+                inputsDiv.innerHTML = `
+                    <select id="prefijoWhatsapp">
+                    <!-- Países Latinoamericanos -->
+                    <option value="52">México (+52)</option>
+                    <option value="53">Cuba (+53)</option>
+                    <option value="54">Argentina (+54)</option>
+                    <option value="55">Brasil (+55)</option>
+                    <option value="56">Chile (+56)</option>
+                    <option value="57">Colombia (+57)</option>
+                    <option value="58">Venezuela (+58)</option>
+                    <option value="51">Perú (+51)</option>
+                    <option value="1">Estados Unidos y Canadá (+1)</option>
+                    <!-- Resto del Mundo -->
+                    <option value="7">Rusia (+7)</option>
+                    <option value="20">Egipto (+20)</option>
+                    <option value="27">Sudáfrica (+27)</option>
+                    <option value="30">Grecia (+30)</option>
+                    <option value="31">Países Bajos (+31)</option>
+                    <option value="32">Bélgica (+32)</option>
+                    <option value="33">Francia (+33)</option>
+                    <option value="34">España (+34)</option>
+                    <option value="36">Hungría (+36)</option>
+                    <option value="39">Italia (+39)</option>
+                    <option value="40">Rumania (+40)</option>
+                    <option value="41">Suiza (+41)</option>
+                    <option value="43">Austria (+43)</option>
+                    <option value="44">Reino Unido (+44)</option>
+                    <option value="45">Dinamarca (+45)</option>
+                    <option value="46">Suecia (+46)</option>
+                    <option value="47">Noruega (+47)</option>
+                    <option value="48">Polonia (+48)</option>
+                    <option value="49">Alemania (+49)</option>
+                    <option value="60">Malasia (+60)</option>
+                    <option value="61">Australia (+61)</option>
+                    <option value="62">Indonesia (+62)</option>
+                    <option value="63">Filipinas (+63)</option>
+                    <option value="64">Nueva Zelanda (+64)</option>
+                    <option value="65">Singapur (+65)</option>
+                    <option value="66">Tailandia (+66)</option>
+                    <option value="81">Japón (+81)</option>
+                    <option value="82">Corea del Sur (+82)</option>
+                    <option value="84">Vietnam (+84)</option>
+                    <option value="86">China (+86)</option>
+                    <option value="90">Turquía (+90)</option>
+                    <option value="91">India (+91)</option>
+                    <option value="92">Pakistán (+92)</option>
+                    <option value="93">Afganistán (+93)</option>
+                    <option value="94">Sri Lanka (+94)</option>
+                    <option value="95">Myanmar (+95)</option>
+                    <option value="98">Irán (+98)</option>
+                    <option value="211">Sudán del Sur (+211)</option>
+                    <option value="212">Marruecos (+212)</option>
+                    <option value="213">Argelia (+213)</option>
+                    <option value="216">Túnez (+216)</option>
+                    <option value="218">Libia (+218)</option>
+                    <option value="220">Gambia (+220)</option>
+                    <option value="221">Senegal (+221)</option>
+                    <option value="222">Mauritania (+222)</option>
+                    <option value="223">Malí (+223)</option>
+                    <option value="224">Guinea (+224)</option>
+                    <option value="225">Costa de Marfil (+225)</option>
+                    <option value="226">Burkina Faso (+226)</option>
+                    <option value="227">Níger (+227)</option>
+                    <option value="228">Togo (+228)</option>
+                    <option value="229">Benín (+229)</option>
+                    <option value="230">Mauricio (+230)</option>
+                    <option value="231">Liberia (+231)</option>
+                    <option value="232">Sierra Leona (+232)</option>
+                    <option value="233">Ghana (+233)</option>
+                    <option value="234">Nigeria (+234)</option>
+                    <option value="235">Chad (+235)</option>
+                    <option value="236">República Centroafricana (+236)</option>
+                    <option value="237">Camerún (+237)</option>
+                    <option value="238">Cabo Verde (+238)</option>
+                    <option value="239">Santo Tomé y Príncipe (+239)</option>
+                    <option value="240">Guinea Ecuatorial (+240)</option>
+                    <option value="241">Gabón (+241)</option>
+                    <option value="242">República del Congo (+242)</option>
+                    <option value="243">República Democrática del Congo (+243)</option>
+                    <option value="244">Angola (+244)</option>
+                    <option value="248">Seychelles (+248)</option>
+                    <option value="249">Sudán (+249)</option>
+                    <option value="250">Ruanda (+250)</option>
+                    <option value="251">Etiopía (+251)</option>
+                    <option value="252">Somalia (+252)</option>
+                    <option value="253">Yibuti (+253)</option>
+                    <option value="254">Kenia (+254)</option>
+                    <option value="255">Tanzania (+255)</option>
+                    <option value="256">Uganda (+256)</option>
+                    <option value="257">Burundi (+257)</option>
+                    <option value="258">Mozambique (+258)</option>
+                    <option value="260">Zambia (+260)</option>
+                    <option value="261">Madagascar (+261)</option>
+                    <option value="262">Reunión (+262)</option>
+                    <option value="263">Zimbabue (+263)</option>
+                    <option value="264">Namibia (+264)</option>
+                    <option value="265">Malaui (+265)</option>
+                    <option value="266">Lesoto (+266)</option>
+                    <option value="267">Botsuana (+267)</option>
+                    <option value="268">Esuatini (+268)</option>
+                    <option value="269">Comoras (+269)</option>
+                    <option value="290">Santa Elena (+290)</option>
+                    <option value="291">Eritrea (+291)</option>
+                    <option value="297">Aruba (+297)</option>
+                    <option value="298">Islas Feroe (+298)</option>
+                    <option value="299">Groenlandia (+299)</option>
+                    <option value="350">Gibraltar (+350)</option>
+                    <option value="351">Portugal (+351)</option>
+                    <option value="352">Luxemburgo (+352)</option>
+                    <option value="353">Irlanda (+353)</option>
+                    <option value="354">Islandia (+354)</option>
+                    <option value="355">Albania (+355)</option>
+                    <option value="356">Malta (+356)</option>
+                    <option value="357">Chipre (+357)</option>
+                    <option value="358">Finlandia (+358)</option>
+                    <option value="359">Bulgaria (+359)</option>
+                    <option value="370">Lituania (+370)</option>
+                    <option value="371">Letonia (+371)</option>
+                    <option value="372">Estonia (+372)</option>
+                    <option value="373">Moldavia (+373)</option>
+                    <option value="374">Armenia (+374)</option>
+                    <option value="375">Bielorrusia (+375)</option>
+                    <option value="376">Andorra (+376)</option>
+                    <option value="377">Mónaco (+377)</option>
+                    <option value="378">San Marino (+378)</option>
+                    <option value="380">Ucrania (+380)</option>
+                    <option value="381">Serbia (+381)</option>
+                    <option value="382">Montenegro (+382)</option>
+                    <option value="383">Kosovo (+383)</option>
+                    <option value="385">Croacia (+385)</option>
+                    <option value="386">Eslovenia (+386)</option>
+                    <option value="387">Bosnia y Herzegovina (+387)</option>
+                    <option value="389">Macedonia del Norte (+389)</option>
+                    <option value="420">Chequia (+420)</option>
+                    <option value="421">Eslovaquia (+421)</option>
+                    <option value="423">Liechtenstein (+423)</option>
+                    <!-- Añadir más prefijos según sea necesario -->
+                </select>
+                    <input type="text" id="telefonoWhatsapp" placeholder="Número de teléfono">
                 `;
             }
             generarQR();
