--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <i class="fas fa-download"></i>
             </div>
         </a>
-        <a href="" class="work__img">
+        <a href="/finanzasp.html" class="work__img">
             <img src="assets/img/work3.jpg" alt="">
             <div class="download-icon">
                 <i class="fas fa-download"></i>
