--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </a>
         <a href="/finanzasp.html" class="work__img">
-            <img src="assets/img/work3.jpg" alt="">
+            <img src="assets/img/fi.png" alt="">
             <div class="download-icon">
                 <i class="fas fa-download"></i>
             </div>
