--- a/qr.html
+++ b/qr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Códigos QR 🤟</title>
+    <title>Generador de Códigos QR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <style>
@@ -155,11 +155,11 @@
     <div style="margin-top: 120px;">
         
         <select id="tipo">
-            <option value="link">Enlace</option>
-            <option value="wifi">WiFi</option>
-            <option value="texto">Texto</option>
-            <option value="vcard">vCard</option>
-            <option value="whatsapp">WhatsApp</option>
+            <option value="link">Enlace 🔗</option>
+            <option value="wifi">WiFi 🛜</option>
+            <option value="texto">Texto 📝</option>
+            <option value="vcard">vCard 🪪</option>
+            <option value="whatsapp">WhatsApp 📲</option>
         </select>
         <div id="inputs">
             <input type="text" id="contenido" placeholder="Ingresa el enlace">
