--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <i class="fas fa-download"></i>
             </div>
         </a>
-        <a href="" class="work__img">
+        <a href="/divisas.html" class="work__img">
             <img src="assets/img/work4.jpg" alt="">
             <div class="download-icon">
                 <i class="fas fa-download"></i>
