--- a/divisas.html
+++ b/divisas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos de Banxico</title>
+    <title>Conversor de divisas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
         body {
             font-family: 'Poppins', sans-serif;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;;
             align-items: center;
             height: 100vh;
             margin: 0;
@@ -31,6 +31,7 @@
             text-align: center;
             box-sizing: border-box;
             transition: background-color 0.3s;
+            margin-top: 70px;
         }
         h1 {
             font-size: 1.5em;
@@ -146,7 +147,7 @@
             left: 50%;
             transform: translateX(-50%);
             width: calc(100% - 40px);
-            max-width: 500px;
+            max-width: 450px;
             background: #667eea;
             color: #fff;
             padding: 10px 20px;
@@ -207,7 +208,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div>Datos de Banxico</div>
+        <div>Divisas</div>
         <div class="toggle-container">
             <span class="toggle-label">Modo Noche</span>
             <label class="toggle-switch">
@@ -296,11 +297,11 @@
                 if (currencyPriceInput.value && !isNaN(parseFloat(currencyPriceInput.value)) && dollarPrice !== null) {
                     const currencyPrice = parseFloat(currencyPriceInput.value);
                     const equivalence = currencyPrice / dollarPrice;
-                    equivalenceElement.textContent = `Equivalencia: ${equivalence.toFixed(2)} ${currencySelector.options[currencySelector.selectedIndex].text} por 1 USD`;
+                    //equivalenceElement.textContent = `Equivalencia: ${equivalence.toFixed(2)} ${currencySelector.options[currencySelector.selectedIndex].text} por 1 USD`;
                     const equivalence2900 = amount / equivalence;
                     equivalenceResultElement.textContent = `${equivalence2900.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} ${currencySelector.options[currencySelector.selectedIndex].text}`;
                 } else {
-                    equivalenceElement.textContent = '';
+                    //equivalenceElement.textContent = '';
                     equivalenceResultElement.textContent = '';
                 }
             });
