--- a/divisas.html
+++ b/divisas.html
@@ -44,7 +44,8 @@
         }
         .loading {
             font-style: italic;
-            color: #888;
+            color: #888686;
+            font-size: .8em;
         }
         .error {
             color: #d9534f;
@@ -208,7 +209,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div>Divisas</div>
+        <div>Divisas 💵</div>
         <div class="toggle-container">
             <span class="toggle-label">Modo Noche</span>
             <label class="toggle-switch">
