Actualizar divfr.html

--- a/divfr.html
+++ b/divfr.html
@@ -152,7 +152,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Fraccionador de Números Mejorado</h2>
+        <h2>Fraccionador de Números</h2>
         <div class="input-container">
             <input type="number" id="numero" placeholder="Ingresa un número (Ej: 2500)" oninput="fraccionarNumero()" aria-label="Ingresar un número a fraccionar" />
             <select id="moneda" onchange="mostrarTipoCambio()">
